apps/search-derive/tests/ui/wrong_nullable.stderr
error: field `email` is required (non-null) in the schema — drop the `Option<…>`
 --> tests/ui/wrong_nullable.rs:8:12
  |
8 |     email: Option<String>,
  |            ^^^^^^
